--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,26 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Far Away",
+  "name": "Far Away, Make your trip List easly",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "icons/icon-1024.png",
+      "sizes": "1024x1024",
+      "type": "image/png"
     },
     {
-      "src": "logo512.png",
+      "src": "icons/icon-maskable.png",
+      "sizes": "512x512",
       "type": "image/png",
-      "sizes": "512x512"
+      "purpose": "maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "./",
+  "id": "my-pwa-id",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
