--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://harrshhpattell.github.io/FarAway-Packing_List_Planner",
+  "homepage": "https://Harrshhpattell.github.io/FarAway-Packing_List_Planner",
   "name": "travel-list",
   "version": "0.1.0",
   "private": true,
