--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,8 +19,7 @@
       "purpose": "maskable"
     }
   ],
-  "start_url": "./",
-  "id": "my-pwa-id",
+  "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
